fixed overflow on large desktop screens

--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -492,12 +492,12 @@ nav{
 
 
 
-@media (min-width: 768px){
+/* @media (min-width: 768px){
   .sidenav {
       display: none;
   }
 
-}
+} */
 
 
 @media (max-width: 769px){
@@ -521,7 +521,7 @@ nav{
     .about .right img {
       margin-top: 1%;
       width:100%;
-      height: 450px;
+      
     }
     .title{
       font-size: 24px;
@@ -693,11 +693,11 @@ nav{
 }
 
 /* Extra large devices (large desktops, 1600px and up) */
-@media (min-width: 1600px)  and (max-width: 1999.99px) {
+/* @media (min-width: 1600px)  and (max-width: 1999.99px) {
   /* .sidenav {
       display: none;
   } */
-  .jumbotron {
+  /* .jumbotron {
       min-height: 1600px;
       min-width: 100vw!important;
       background-size: cover;
@@ -705,9 +705,9 @@ nav{
       background-image: url('../images/landing/hero.svg');
       background-repeat: no-repeat;
       margin-bottom: 0px!important;
-  }
+  } */
 
-}
+/* } */ 
 /* Extra large devices (large desktops, 1600px and up) */
 @media (min-width: 2000px)  and (max-width: 2399.99px) {
   /* .sidenav {
